# interstitium-demo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
demo/: index.html
src/interstitium/: __init__.py  cli.py  demo_registry.py  engine.py  formulary.py  models.py  phi.py  policy.py  runtime.py  scenarios.py
src/interstitium/workflows/: __init__.py  ama.py  culture.py  fallback.py  intake.py  lab_integrity.py  radiology.py  symptoms.py
tests/: test_engine.py  test_escalation_content.py  test_lab_integrity.py  test_phi.py  test_policy.py  test_registry_invariants.py  test_routing.py
